# BoostAsioDemo

./: .clang-format  .dockerignore  .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  conanfile.py  docker-compose.operator.yml  docker-compose.yml  run_release_build.bat
.github/: runner-matrix.json
cmake/: CompilerWarnings.cmake  Dependencies.cmake  FindGRPC.cmake
conan/: README.md  remotes.example.json
config/: battle_backend.json  gateway.conf  gateway.json  login_backend.json  room_backend.json
deploy/: README.md
docker/: agent-config.yaml  gateway-server.Dockerfile  grafana-agent.Dockerfile
docs/: README.md  actor-concurrency-model-r3.md  architecture-acceptance-criteria.md  architecture-baseline-r2.md  architecture-overview.md  architecture-roadmap.md  current-state.md  (+46 more)
examples/: CMakeLists.txt
examples/admin_demo/: CMakeLists.txt  admin_demo_main.cpp
examples/battle/: CMakeLists.txt  battle_server_main.cpp
examples/battle_demo/: CMakeLists.txt  battle_demo_main.cpp
examples/echo/: CMakeLists.txt  server_main.cpp
examples/login/: CMakeLists.txt  login_server_main.cpp
examples/login_demo/: CMakeLists.txt  login_demo_main.cpp
examples/pressure/: CMakeLists.txt  gateway_pressure_main.cpp
examples/realtime_echo_plugin/: CMakeLists.txt  echo_plugin.cpp  echo_plugin.h  main.cpp
examples/room/: CMakeLists.txt  room_server_main.cpp
examples/room_demo/: CMakeLists.txt  room_demo_main.cpp
examples/v2_arch_benchmark/: CMakeLists.txt  main.cpp
examples/v2_battle_backend/: CMakeLists.txt  main.cpp
examples/v2_gateway_demo/: CMakeLists.txt  main.cpp
examples/v2_gateway_pressure/: main.cpp
examples/v2_leaderboard_backend/: main.cpp
examples/v2_login_backend/: CMakeLists.txt  main.cpp
examples/v2_match_backend/: main.cpp
examples/v2_room_backend/: CMakeLists.txt  main.cpp
sdk/examples/: CMakeLists.txt
sdk/examples/csharp_full_flow/: Program.cs
sdk/examples/full_flow_client/: main.cpp
src/v2/: CMakeLists.txt
src/v2/actor/: README.md  actor.cpp  actor_ref.cpp
src/v2/aoi/: aoi_grid.cpp  aoi_system.cpp  spatial_grid.cpp
src/v2/battle/: battle_actor.cpp  battle_backend_service.cpp  battle_instance_plugin.cpp  battle_snapshot.cpp  game_systems.cpp  runtime_world.cpp  tank_battle_plugin.cpp
src/v2/common/: module_marker.cpp
src/v2/data/: cached_data_store.cpp  replay_format.cpp  write_behind_store.cpp
src/v2/diagnostics/: diagnostics_manager.cpp  health_check.cpp
src/v2/ecs/: parallel_system_executor.cpp  world.cpp
src/v2/gateway/: README.md  battle_archive_store.cpp  battle_data_store.cpp  battle_protocol_codec.cpp  battle_wire_parser.cpp  demo_server.cpp  gateway_actor.cpp  gateway_command_parser.cpp  gateway_response_parser.cpp  gateway_server_bridge.cpp  gateway_service_bridge.cpp  runtime.cpp  session_adapter.cpp
src/v2/grpc/: gateway_grpc_server.cpp  gateway_grpc_server.h  grpc_adapter.h  grpc_server.h
src/v2/io/: io_engine.cpp
src/v2/leaderboard/: leaderboard_service.cpp
src/v2/login/: login_backend_service.cpp
src/v2/match/: matchmaking_service.cpp
src/v2/memory/: arena.cpp
src/v2/perf/: perf_counter.cpp
src/v2/persistence/: player_data.cpp  replay_storage.cpp  storage_engine_sqlite.cpp  writebehind.cpp
src/v2/player/: README.md  player_actor.cpp
src/v2/realtime/: instance_runtime.cpp
src/v2/room/: README.md  room_actor.cpp  room_backend_service.cpp
src/v2/runtime/: README.md  actor_system.cpp
src/v2/security/: anti_cheat.cpp
src/v2/service/: backend_connection.cpp  backend_envelope.cpp  backend_frame_codec.cpp  backend_server.cpp  circuit_breaker.cpp  envelope_adapter.cpp  error_codes.cpp  service_manifest.cpp  service_registrar.cpp  service_registry.cpp
tests/: CMakeLists.txt  hello_test.cpp
tests/chaos/: CMakeLists.txt  chaos_test_framework.h  gateway_chaos_test.cpp  stability_chaos_test.cpp
tests/fuzz/: CMakeLists.txt  fuzz_fragment_assembler.cpp  fuzz_protocol_codec.cpp
tests/integration/: CMakeLists.txt  gateway_integration_test.cpp  http_management_test.cpp
tests/perf/: CMakeLists.txt  grpc_vs_tcp_perf_test.cpp
tests/security/: CMakeLists.txt  protocol_security_test.cpp
tests/unit/: CMakeLists.txt  admin_service_test.cpp  battle_manager_test.cpp  compressor_test.cpp  config_test.cpp  gateway_metrics_exporter_test.cpp  lifecycle_assembly_test.cpp  message_dispatcher_test.cpp  packet_codec_test.cpp  packet_fuzz_test.cpp  redis_event_store_test.cpp  room_manager_test.cpp  service_registration_test.cpp  session_close_test.cpp  session_manager_test.cpp
tests/v2/: CMakeLists.txt
tests/v2/integration/: README.md  backend_health_test.cpp  backend_routing_test.cpp  business_flow_test.cpp  cluster_router_e2e_test.cpp  data_layer_test.cpp  demo_server_smoke_test.cpp  matchmaking_e2e_test.cpp  multi_process_test.cpp  process_supervisor_test.cpp  raft_e2e_test.cpp  service_bus_integrity_test.cpp  settlement_replay_test.cpp  windows_platform_test.cpp
tests/v2/unit/: actor_runtime_test.cpp  actor_snapshot_test.cpp  anti_cheat_test.cpp  aoi_spatial_grid_test.cpp  arena_test.cpp  battle_actor_test.cpp  battle_archive_test.cpp  battle_authoritative_test.cpp  battle_determinism_test.cpp  battle_lifecycle_test.cpp  battle_protocol_codec_test.cpp  battle_runtime_world_test.cpp  battle_wire_parser_test.cpp  bootstrap_smoke_test.cpp  cache_line_test.cpp  cached_data_store_test.cpp  connected_flow_test.cpp  data_layer_test.cpp  diagnostics_manager_test.cpp  ecs_world_test.cpp  feature_flags_test.cpp  gateway_bridge_test.cpp  gateway_command_parser_test.cpp  gateway_grpc_test.cpp  gateway_response_parser_test.cpp  health_check_test.cpp  io_engine_test.cpp  k8s_operator_test.cpp  latency_histogram_test.cpp  legacy_persistence_bridge_test.cpp  lru_cache_test.cpp  object_pool_test.cpp  operator_status_test.cpp  parallel_system_executor_test.cpp  player_actor_test.cpp  player_data_test.cpp  proto_schema_test.cpp  raft_test.cpp  remote_actor_test.cpp  room_actor_test.cpp  (+6 more)
tests/v2/unit/realtime/: instance_runtime_test.cpp  spi_compliance_test.cpp
(+406 files in other folders)
