add_library(project_v2 STATIC
    actor/actor.cpp
    actor/actor_ref.cpp
    battle/battle_actor.cpp
    battle/runtime_world.cpp
    common/module_marker.cpp
    ecs/world.cpp
    gateway/battle_protocol_codec.cpp
    gateway/battle_archive_store.cpp
    gateway/battle_wire_parser.cpp
    gateway/gateway_command_parser.cpp
    gateway/demo_server.cpp
    gateway/gateway_actor.cpp
    gateway/gateway_response_parser.cpp
    gateway/gateway_server_bridge.cpp
    gateway/runtime.cpp
    gateway/session_adapter.cpp
    io/io_engine.cpp
    player/player_actor.cpp
    room/room_actor.cpp
    runtime/actor_system.cpp
)
target_include_directories(project_v2
    PUBLIC
        "${CMAKE_SOURCE_DIR}/include"
)
target_link_libraries(project_v2
    PUBLIC
        project_app
        project_net
)
apply_project_warnings(project_v2)
